methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:3: error: not found: type colour
def isFacingTrail(c:colour):Boolean = {
                    ^